# ff14_fflogs_dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml
config/presets/: actions-7.3x-combat-all+tags.json
docs/: schema.md
docs/ADR/: 0001-decisions.md
scripts/: README.md
src/ff14_dataset/: cli.py  config.py
src/ff14_dataset/features/: build.py
src/ff14_dataset/gui/: app.py
src/ff14_dataset/ingestion/: fflogs_client.py  pipeline.py
src/ff14_dataset/io/: duck.py  storage.py
src/ff14_dataset/metrics/: sam.py
src/ff14_dataset/processing/: normalize.py
src/ff14_dataset/scraper/: jobguide.py
src/ff14_dataset/tagging/: actions.py
src/ff14_dataset/utils/: slug.py
